Bug 160351 - The label in the Bibliography formatting menu has been mislabeled for many years.
Summary: The label in the Bibliography formatting menu has been mislabeled for many ye...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.3 target:7.6.7
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-25 12:02 UTC by Takenori Yasuda
Modified: 2024-04-02 01:38 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
This image is the "Bibliography" formatting menu in Japanese. The label "!!br0ken!!" in this image should be "年" but has been mislabeled for many years. (76.03 KB, image/png)
2024-03-25 12:06 UTC, Takenori Yasuda
Details
bt with console logs (6.75 KB, text/plain)
2024-03-25 12:27 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Takenori Yasuda 2024-03-25 12:02:17 UTC
Description:
Regarding the "Bibliography" formatting menu in Japanese.
The label "年" has been mislabeled as "!!br0ken!!" for many years (probably ever since the earliest LibreOffice), hampering Japanese users understanding.

Steps to Reproduce:
1.Change the UI language to Japanese and restart LibreOffice.
2.Open LibreOffice Writer.
3.In the menu bar, go to "挿入(Insert)" -> "目次と索引(Table of Contents and Index)" -> "目次、索引または参考文献(Table of Contents, Index or Bibliography)".
4.Change "タイプ(Type)" in "種類(Type)" tab from "目次(Table of Contents)" to "参考文献表(Bibliography)".
5.Look at "構成(Structure)" section of "項目(Entries)" tab.

Actual Results:
The label "年" is mislabeled as "!!br0ken!!".

Expected Results:
The label "!!br0ken!!" should be "年".


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 8; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
Comment 1 Takenori Yasuda 2024-03-25 12:06:35 UTC
Created attachment 193288 [details]
This image is the "Bibliography" formatting menu in Japanese. The label "!!br0ken!!" in this image should be "年" but has been mislabeled for many years.
Comment 2 Julien Nabet 2024-03-25 12:27:47 UTC
Created attachment 193289 [details]
bt with console logs

On pc Debian x86-64 with master sources updated today, I had a crash.
Comment 3 Julien Nabet 2024-03-25 12:28:31 UTC
(In reply to Julien Nabet from comment #2)
> Created attachment 193289 [details]
> bt with console logs
> 
> On pc Debian x86-64 with master sources updated today, I had a crash.

I meant an assertion, not a crash.
Comment 4 Mike Kaganski 2024-03-25 12:43:01 UTC
https://gerrit.libreoffice.org/c/core/+/165282
Comment 5 Commit Notification 2024-03-25 15:52:51 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4a14bad7232ecf23d23c1997dc20922d0b4892cb

tdf#160351: the field name can be shorter than two symbols

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-03-25 21:43:29 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/02609da5ee8188cb00fc0b97052d2cc8d2576900

Related tdf#160351: the field name can be shorter than two symbols

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-03-26 08:24:24 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/0a86d2e2dd898aa1d455c0bbde91dd9a8b011daf

tdf#160351: the field name can be shorter than two symbols

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-03-26 12:14:59 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/4fd5e282a6b0b9e531740b500c52040dc6ac5481

tdf#160351: the field name can be shorter than two symbols

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-03-26 13:18:17 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/81fdf964bec1c4555db2f08c300c7b3f09130fbc

Related tdf#160351: the field name can be shorter than two symbols

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-04-02 01:38:40 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/87ef871a777b1d44486ae51e536c95a0b5c49e67

Related tdf#160351: the field name can be shorter than two symbols

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.